src/test/ui/parser/raw-byte-string-literals.stderr
error: raw byte string must be ASCII
  --> $DIR/raw-byte-string-literals.rs:5:8
   |
LL |     br"é";
   |        ^

error: found invalid character; only `#` is allowed in raw string delimitation: ~
  --> $DIR/raw-byte-string-literals.rs:3:6
   |
LL |     br##~"a"~##;
   |      ^^^

error: aborting due to 2 previous errors

